ci: ajusta workflows e atualiza pnpm-lock
